<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">M8C</string>
    <string name="up">Up</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="down">Down</string>
    <string name="option">Option</string>
    <string name="option_char">O</string>
    <string name="edit">Edit</string>
    <string name="edit_char">E</string>
    <string name="play">Play</string>
    <string name="play_char">P</string>
    <string name="shift">Shift</string>
    <string name="shift_char">S</string>
    <string name="connect_your_m8_device">Connect your M8 device!</string>
    <string name="start">Start</string>
    <string name="show_onscreen_buttons">Show onscreen buttons</string>
    <string name="choose_audio_device">Preferred audio device</string>
    <string name="choose_audio_driver">Preferred audio driver</string>
    <string name="choose_audio_buffer">Choose audio buffer size</string>
    <string-array name="audio_drivers">
        <item>AAudio</item>
        <item>openslES</item>
    </string-array>
    <string-array name="audio_buffers">
        <item>512</item>
        <item>1024</item>
        <item>2048</item>
        <item>4096</item>
        <item>8192</item>
    </string-array>
    <string-array name="audio_gain_entries">
        <item>1x (default)</item>
        <item>1.5x</item>
        <item>2x</item>
        <item>3x</item>
    </string-array>
    <string-array name="audio_gain_values">
        <item>1.0</item>
        <item>1.5</item>
        <item>2.0</item>
        <item>3.0</item>
    </string-array>
    <string name="audio_gain_pref">audio_gain</string>
    <string name="choose_audio_gain">Volume boost</string>
    <string name="use_default_audio_pref">use_default_audio</string>
    <string name="use_default_audio">Use default audio device</string>
    <string name="use_default_audio_summary">Let the system decide; follows headphones, Bluetooth, etc.</string>
    <string name="audio_header">Audio</string>
    <string name="other">Other</string>
    <string name="audio_driver_pref">audio_driver</string>
    <string name="audio_buffer_pref">audio_buffer</string>
    <string name="audio_device_pref">audio_device</string>
    <string name="use_default_audio_input_pref">use_default_audio_input</string>
    <string name="use_default_audio_input">Use default audio input</string>
    <string name="use_default_audio_input_summary">Let the system decide; follows headset mic, Bluetooth, etc.</string>
    <string name="audio_input_device_pref">audio_input_device</string>
    <string name="choose_audio_input_device">Audio input device</string>
    <string name="buttons_pref">buttons</string>
    <string name="ui">User Interface</string>
    <string name="lock_orientation_pref">lock_orientation</string>
    <string name="lock_landscape">Lock to landscape orientation</string>
    <string name="gamepad_mappings">Gamepad mappings</string>
    <string name="gamepad_mappings_summary">Use custom gamepad button mappings</string>
    <string name="input">Input</string>
    <string name="advanced">Advanced</string>
    <string name="idle_ms_pref">idle_ms</string>
    <string name="idle_ms">Idle ms</string>
    <string name="idle_ms_summary">The delay amount in ms in the main loop, decrease value for faster operation, increase value if too much cpu usage</string>
    <string name="clear_settings">Clear settings</string>
    <string name="version_pref">version_pref</string>
    <string name="new_button_layout">Use new horizontal button layout</string>
    <string name="new_button_layout_pref">button_layout_pref</string>
    <string name="new_button_layout_summary">Closer to the real device, uses portrait orientation</string>
    <string name="show_onscreen_buttons_summary">Buttons will still be there, but invisible</string>
    <string name="midi_header">MIDI</string>
    <string name="touch_cc_enabled_pref">touch_cc_enabled</string>
    <string name="touch_cc_enabled">Touch CC</string>
    <string name="touch_cc_enabled_summary">Send MIDI CC to M8 when touching the screen. X (up) and Y (right) map to separate CCs.</string>
    <string name="touch_cc_channel_pref">touch_cc_channel</string>
    <string name="touch_cc_channel">MIDI channel</string>
    <string name="touch_cc_x_pref">touch_cc_x</string>
    <string name="touch_cc_x">X (up/down) CC number</string>
    <string name="touch_cc_y_pref">touch_cc_y</string>
    <string name="touch_cc_y">Y (left/right) CC number</string>
    <string-array name="sdl_gamecontroller_buttons">
        <item>A</item>
        <item>B</item>
        <item>X</item>
        <item>Y</item>
        <item>BACK</item>
        <item>GUIDE</item>
        <item>START</item>
        <item>LEFTSTICK</item>
        <item>RIGHTSTICK</item>
        <item>LEFTSHOULDER</item>
        <item>RIGHTSHOULDER</item>
        <item>DPAD_UP</item>
        <item>DPAD_DOWN</item>
        <item>DPAD_LEFT</item>
        <item>DPAD_RIGHT</item>
        <item tools:ignore="Typos">MISC1</item>
        <item tools:ignore="Typos">PADDLE1</item>
        <item>PADDLE2</item>
        <item>PADDLE3</item>
        <item>PADDLE4</item>
        <item>TOUCHPAD</item>
        <item>MAX</item>
    </string-array>
</resources>