<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="Info">
        <EditTextPreference
            app:key="@string/version_pref"
            app:title="Version 1.0.0"
            app:enabled="false"
            />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/audio_header">

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:key="@string/use_default_audio_pref"
            app:title="@string/use_default_audio"
            app:summary="@string/use_default_audio_summary" />

        <ListPreference
            app:defaultValue="0"
            app:key="@string/audio_device_pref"
            app:title="@string/choose_audio_device"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:key="@string/use_default_audio_input_pref"
            app:title="@string/use_default_audio_input"
            app:summary="@string/use_default_audio_input_summary" />

        <ListPreference
            app:defaultValue="0"
            app:key="@string/audio_input_device_pref"
            app:title="@string/choose_audio_input_device"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="AAudio"
            app:entries="@array/audio_drivers"
            app:entryValues="@array/audio_drivers"
            app:key="@string/audio_driver_pref"
            app:title="@string/choose_audio_driver"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="4096"
            app:entries="@array/audio_buffers"
            app:entryValues="@array/audio_buffers"
            app:key="@string/audio_buffer_pref"
            app:title="@string/choose_audio_buffer"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="1.0"
            app:entries="@array/audio_gain_entries"
            app:entryValues="@array/audio_gain_values"
            app:key="@string/audio_gain_pref"
            app:title="@string/choose_audio_gain"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/ui">

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:key="@string/buttons_pref"
            app:summary="@string/show_onscreen_buttons_summary"
            app:title="@string/show_onscreen_buttons" />

        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:key="@string/new_button_layout_pref"
            app:summary="@string/new_button_layout_summary"
            app:title="@string/new_button_layout" />

        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:key="@string/lock_orientation_pref"
            app:title="@string/lock_landscape" />


    </PreferenceCategory>

    <PreferenceCategory app:title="@string/input">
        <Preference
            app:fragment="io.maido.m8client.settings.GamepadSettings"
            app:summary="@string/gamepad_mappings_summary"
            app:title="@string/gamepad_mappings" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/midi_header">
        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:key="@string/touch_cc_enabled_pref"
            app:title="@string/touch_cc_enabled"
            app:summary="@string/touch_cc_enabled_summary" />
        <EditTextPreference
            app:defaultValue="1"
            app:key="@string/touch_cc_channel_pref"
            app:title="@string/touch_cc_channel"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:defaultValue="1"
            app:key="@string/touch_cc_x_pref"
            app:title="@string/touch_cc_x"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:defaultValue="2"
            app:key="@string/touch_cc_y_pref"
            app:title="@string/touch_cc_y"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/advanced">
        <EditTextPreference
            app:defaultValue="0"
            app:key="@string/idle_ms_pref"
            app:summary="@string/idle_ms_summary"
            app:title="@string/idle_ms" />
    </PreferenceCategory>

</PreferenceScreen>